--- a/scan_facts.yml
+++ b/scan_facts.yml
@@ -1,7 +1,7 @@
 - hosts: all
   vars:
-    scan_use_checksum: false
-    scan_use_recursive: false
+    - scan_use_checksum: false
+    - scan_use_recursive: false
   tasks:
     - name: "Scan packages (Unix/Linux)"
       scan_packages:
@@ -19,7 +19,7 @@
     - name: "Scan Insights for Machine ID (Unix/Linux)"
       scan_insights:
       when: ansible_os_family != "Windows"
-    
+
     - name: "Scan packages (Windows)"
       win_scan_packages:
       when: ansible_os_family == "Windows"
